--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -37,5 +37,10 @@
         <item name="colorAccent">@color/app_main_color</item>
     </style>
 
+    <style name="GalleryStyle" parent="Widget.MaterialComponents.Toolbar.Primary">
+        <item name="colorPrimaryVariant">@color/white</item>
+        <item name="colorPrimary">@color/trans</item>
+        <item name="titleTextColor">@color/white</item>
+    </style>
 
 </resources>
