--- a/app/src/main/res/layout/category.xml
+++ b/app/src/main/res/layout/category.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layout_marginBottom="10dp"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
@@ -9,6 +10,7 @@
         android:layout_width="130dp"
         android:layout_height="120dp"
         android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginTop="5dp"
         android:clickable="true"
         android:focusable="true"
@@ -54,6 +56,7 @@
 
 
     <androidx.cardview.widget.CardView
+        android:layout_marginBottom="10dp"
         android:id="@+id/case_transport"
         android:layout_width="130dp"
         android:layout_height="120dp"
@@ -102,6 +105,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:layout_marginBottom="10dp"
         android:id="@+id/case_medicine"
         android:layout_width="130dp"
         android:layout_height="120dp"
@@ -151,6 +155,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/case_flats"
+        android:layout_marginBottom="10dp"
         android:layout_width="130dp"
         android:layout_height="120dp"
         android:layout_marginStart="10dp"
@@ -198,6 +203,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:layout_marginBottom="10dp"
         android:id="@+id/case_buy"
         android:layout_width="130dp"
         android:layout_height="120dp"
@@ -246,6 +252,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:layout_marginBottom="10dp"
         android:id="@+id/case_study"
         android:layout_width="130dp"
         android:layout_height="120dp"
