--- a/app/src/main/res/layout/fragment_transport.xml
+++ b/app/src/main/res/layout/fragment_transport.xml
@@ -224,10 +224,10 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_view_transport"
                     android:layout_width="match_parent"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="0.5mm"
-                    android:layout_marginTop="1mm"
-                    android:layout_marginRight="0.6mm" />
+                    android:layout_marginTop="5dp" />
             </RelativeLayout>
 
 
