--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,20 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="270dp">
+    android:gravity="center"
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_item"
-        android:layout_width="30mm"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="1mm"
-        android:layout_marginTop="1mm"
-        android:layout_marginBottom="1mm"
+        android:layout_width="160dp"
+        android:layout_height="260dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="10dp"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
         app:cardCornerRadius="3dp"
-        app:cardElevation="3dp">
+        app:cardElevation="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,9 +42,9 @@
                 android:layout_marginStart="5dp"
                 android:fontFamily="@font/commons_demi_bold"
                 android:text="Работа, Подработки"
-                android:textStyle="bold"
                 android:textColor="@color/app_main_color"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -53,29 +55,29 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
+                    android:fontFamily="@font/commons_demi_bold"
                     android:text="1800"
-                    android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textSize="14sp"
-                    android:fontFamily="@font/commons_demi_bold" />
+                    android:textStyle="bold" />
 
                 <ImageView
                     android:id="@+id/iv_currency"
                     android:layout_width="7dp"
                     android:layout_height="7dp"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
                     android:layout_marginTop="5dp"
                     android:src="@drawable/ic_ruble_currency_sign" />
             </LinearLayout>
 
             <TextView
-                android:lineHeight="14sp"
-                android:fontFamily="@font/commons_regular"
                 android:id="@+id/tv_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="3dp"
+                android:fontFamily="@font/commons_regular"
+                android:lineHeight="14sp"
                 android:text="Магазинге уборкага упаковкага грузчике балдар кыздар керек мед книжка менен"
                 android:textColor="@color/black"
                 android:textSize="14sp" />
@@ -84,10 +86,10 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginBottom="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom">
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="20dp">
 
             <ImageView
                 android:layout_width="12dp"
@@ -97,20 +99,19 @@
                 android:src="@drawable/ic_location" />
 
             <TextView
-                android:fontFamily="@font/commons_demi_bold"
-                android:layout_weight="1"
-                android:layout_marginTop="12dp"
                 android:id="@+id/tv_location"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="3dp"
+                android:layout_marginTop="12dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/commons_demi_bold"
                 android:text="Не указано"
                 android:textColor="@color/black"
                 android:textSize="14sp" />
         </LinearLayout>
 
         <TextView
-            android:fontFamily="@font/commons_demi_bold"
             android:id="@+id/tv_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -118,6 +119,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="2dp"
             android:layout_marginBottom="4dp"
+            android:fontFamily="@font/commons_demi_bold"
             android:text="22.01.2021"
             android:textColor="@color/black"
             android:textSize="13sp"
