--- a/app/src/main/res/layout/custom_toolbar_back.xml
+++ b/app/src/main/res/layout/custom_toolbar_back.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="50dp"
     android:background="@color/app_main_color"
     android:elevation="6dp"
     app:contentInsetStart="0dp"
@@ -20,10 +20,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:fontFamily="@font/encore_font_circular_book"
+            android:fontFamily="@font/commons_bold"
             android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            android:textSize="22sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -37,7 +36,7 @@
         android:layout_width="27dp"
         android:layout_height="27dp"
         android:layout_gravity="right"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
