--- a/app/src/main/res/layout/fragment_work.xml
+++ b/app/src/main/res/layout/fragment_work.xml
@@ -30,72 +30,74 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:orientation="vertical">
 
 
             <HorizontalScrollView
+                android:scrollbarThumbVertical="@null"
+                android:scrollbarThumbHorizontal="@null"
                 android:layout_width="wrap_content"
-                android:layout_height="10mm">
+                android:layout_height="wrap_content">
 
                 <ScrollView
-                    android:layout_width="match_parent"
+                    android:scrollbarThumbVertical="@null"
+                    android:scrollbarThumbHorizontal="@null"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent">
 
                     <LinearLayout
+                        android:paddingBottom="5dp"
+                        android:paddingTop="5dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
                         <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/btn_tag_first"
-                            android:layout_width="130dp"
+                            android:layout_width="120dp"
                             android:layout_height="35dp"
                             android:layout_marginHorizontal="12dp"
-                            android:layout_marginTop="5dp"
-                            android:background="@drawable/ic_btn_back_short"
-                            android:fontFamily="@font/opensans_bold"
+                            android:background="@drawable/tag_background"
+                            android:fontFamily="@font/commons_demi_bold"
                             android:text="@string/short_time_work"
                             android:textAllCaps="false"
                             android:textColor="@android:color/white"
-                            android:textSize="16sp" />
+                            android:textSize="18sp" />
 
                         <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/btn_tag_second"
-                            android:layout_width="130dp"
+                            android:layout_width="110dp"
                             android:layout_height="35dp"
-                            android:layout_marginTop="5dp"
-                            android:background="@drawable/ic_btn_back_short"
-                            android:fontFamily="@font/opensans_bold"
+                            android:background="@drawable/tag_background"
+                            android:fontFamily="@font/commons_demi_bold"
                             android:text="Халтура"
                             android:textAllCaps="false"
                             android:textColor="@android:color/white"
-                            android:textSize="16sp" />
+                            android:textSize="18sp" />
 
                         <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/btn_tag_third"
-                            android:layout_width="200dp"
+                            android:layout_width="170dp"
                             android:layout_height="35dp"
                             android:layout_marginHorizontal="12dp"
-                            android:layout_marginTop="5dp"
-                            android:background="@drawable/ic_btn_back"
-                            android:fontFamily="@font/opensans_bold"
+                            android:background="@drawable/tag_background"
+                            android:fontFamily="@font/commons_demi_bold"
                             android:text="@string/full_work"
                             android:textAllCaps="false"
                             android:textColor="@android:color/white"
-                            android:textSize="16sp" />
+                            android:textSize="18sp" />
 
                         <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/btn_tag_fourth"
-                            android:layout_width="130dp"
+                            android:layout_width="115dp"
                             android:layout_height="35dp"
-                            android:layout_marginTop="5dp"
                             android:layout_marginEnd="10dp"
-                            android:background="@drawable/ic_btn_back_short"
-                            android:fontFamily="@font/opensans_bold"
+                            android:background="@drawable/tag_background"
+                            android:fontFamily="@font/commons_demi_bold"
                             android:text="@string/looking_for_work"
                             android:textAllCaps="false"
                             android:textColor="@android:color/white"
-                            android:textSize="16sp" />
+                            android:textSize="18sp" />
 
                     </LinearLayout>
                 </ScrollView>
@@ -104,6 +106,18 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_list_notes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="50dp"
+                    android:overScrollMode="never"
+                    android:scrollbars="none" />
 
                 <ProgressBar
                     android:id="@+id/progressbar"
@@ -114,14 +128,6 @@
                     android:layout_centerInParent="true"
                     android:indeterminateTint="#411E80" />
 
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_work"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="0.5mm"
-                    android:layout_marginTop="2mm"
-                    android:layout_marginRight="0.6mm" />
 
             </RelativeLayout>
         </LinearLayout>
