--- a/app/src/main/res/layout/station_item.xml
+++ b/app/src/main/res/layout/station_item.xml
@@ -1,64 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="50mm"
-    android:paddingTop="1mm"
-    android:paddingBottom="1mm"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical">
 
     <View
         android:layout_width="wrap_content"
         android:layout_height="0.5dp"
-        android:layout_marginLeft="2mm"
-        android:layout_marginRight="2mm"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:background="#EAEAEA" />
+
+
     <LinearLayout
-        android:id="@+id/chosen_station"
-        android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_marginBottom="5dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:focusable="true">
+        android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="40mm"
-            android:layout_height="wrap_content">
+        <ImageView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="8dp"
+            android:src="@drawable/mos_metro" />
 
-            <ImageView
-                android:layout_width="2mm"
-                android:layout_height="2mm"
-                android:layout_marginLeft="2mm"
-                android:layout_marginTop="2.5mm"
-                android:src="@drawable/mos_metro"
-                android:contentDescription="TODO" />
-
-            <TextView
-                android:fontFamily="@font/commons_medium"
-                android:layout_marginTop="1mm"
-                android:id="@+id/tv_name_stations"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="2mm"
-                android:text="Каширская"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_marginLeft="5mm"
-            android:layout_marginTop="1mm"
+        <TextView
+            android:id="@+id/tv_station"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:visibility="gone"
-                android:id="@+id/iv_chosen_icon"
-                android:layout_width="3.5mm"
-                android:layout_height="3.5mm"
-                android:src="@drawable/ic_choosen_station"
-                android:contentDescription="TODO" />
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/commons_medium"
+            android:text="Не указано"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
     </LinearLayout>
 
 </LinearLayout>
