--- a/app/src/main/res/menu/account_menu.xml
+++ b/app/src/main/res/menu/account_menu.xml
@@ -14,7 +14,7 @@
 
             <item
                 android:id="@+id/change_photo"
-                android:icon="@drawable/ic_edit_photo"
+                android:icon="@drawable/ic_choose_photo"
                 android:title="Изменить фото" />
 
             <item
